--- a/help.html
+++ b/help.html
@@ -100,6 +100,27 @@ $(function(){
 <p>Our website uses GitHub servers, so we can't save anything from you. We don't save the content of your table and it remains your property.
 <p>However, we do uses Google Analytics to get anonymous statistics about our number of visitors and the format that you use to generate or import tables (LaTeX, Plain TeX, CSV, HTML...) This helps the developer to stay motivated and to fix priorities. If you want to opt-out from this, you can visit <a href="http://latex-tables.com/#/anonymous">http://latex-tables.com/#/anonymous</a> instead.
 </div>
+<div id="confidential" class="question">
+<p><strong>Credits ?</strong>
+
+<p>All code by myself. This project uses many of my own code which is host as separate project :
+<p><ul>
+<li> <a href="https://github.com/JDMCreator/Table.js">Table.js</a> (by myself) : Complex operations on HTML Tables with JavaScript
+<li> <a href="https://github.com/JDMCreator/toRGBA.js">toRGBA.js</a> (by myself) : Convert any HTML or CSS color to RGBA
+<li> <a href="https://gist.github.com/JDMCreator/c0944e1caab3b913353ac165177b5241">CSVtoArray.js</a> (by myself) : Convert a CSV file to an Array
+</ul>
+
+<p>This project uses two libraries :
+
+<p><ul>
+<li> <a href="https://getbootstrap.com">Bootstrap 3.3</a>
+<li> <a href="http://jquery.com">JQuery</a>
+</ul>
+
+<p>Most of the icons are from <a href="http://glyphicons.com">glyphicons</a> and are included in <a href="https://getbootstrap.com">Bootstrap 3.3</a>. Some are from me. The "underline" icon is made by <a href="https://www.flaticon.com/authors/dave-gandy" title="Dave Gandy">Dave Gandy</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
+
+
+</div>
 <div id="contact" class="question">
 <p><strong>How can I contact you?</strong>
 <p>You can contact me here : in<span></span>f<!---rararar--->o<i>@</i>latex-<script type="text/javascript">
@@ -213,6 +234,7 @@ document.write("t")
 <li>\OE</li>
 <li>\og</li>
 <li>\P
+<li>\par</li>
 <li>\part</li>
 <li>\pounds
 <li>\r</li>
@@ -235,6 +257,7 @@ document.write("t")
 <li>\textsterling
 <li>\toprule</li>
 <li>\u</li>
+<li>\uline</li>
 <li>\underline</li>
 <li>\url</li>
 <li>\v</li>
