--- a/projects/tinyCSS/index.html
+++ b/projects/tinyCSS/index.html
@@ -1,5 +1,6 @@
 <script type="text/javascript" src="tiny.js">
 </script>
+<meta name="viewport" content="width=device-width">
 <link href="tiny.css" rel="stylesheet">
 <title>Tiny.css</title>
 <body>
