--- a/projects/tinyCSS/index.html
+++ b/projects/tinyCSS/index.html
@@ -1,6 +1,5 @@
 <script type="text/javascript" src="tiny.js">
 </script>
-<meta name="viewport" content="width=device-width">
 <link href="tiny.css" rel="stylesheet">
 <title>Tiny.css</title>
 <body>
@@ -151,30 +150,32 @@ ddfgdfg
 </div>
 <button data-toggle="first-modal">Open</button>
 <section role="dialog" class="dialog" id="first-modal">
-	<header>
-		<div class="dialog-title"><h4>The Importance of Data</h4></div>
-		<a class="dialog-close icon hoverable bold" data-close-dialog href="javascript:;"><i class="icon-cross"></i></a>
-	</header>
-	<div class="dialog-body">
-		<div class="text-container">
-		ssdfsdfsdfsdf<br>
-Test<br>
-Test<br>
-Test<br>
-Test<br>
-Test<br>
-Test<br>
-Test<br>
-vTest<br>
-Test<br>
-Test<br>
-Test<br>
-Test<br>
-</div>
+	<div class="dialog-content">
+		<header>
+			<div class="dialog-title"><h4>The Importance of Data</h4></div>
+			<a class="dialog-close icon hoverable bold" data-close-dialog href="javascript:;"><i class="icon-cross"></i></a>
+		</header>
+		<div class="dialog-body">
+			<div class="text-container">
+				ssdfsdfsdfsdf<br>
+				Test<br>
+				Test<br>
+				Test<br>
+				Test<br>
+				Test<br>
+				Test<br>
+				Test<br>
+				vTest<br>
+				Test<br>
+				Test<br>
+				Test<br>
+				Test<br>
+			</div>
+		</div>
+		<footer>
+			Etc. etc.
+		</footer>
 	</div>
-	<footer>
-		Etc. etc.
-	</footer>
 </section>
 </div>
 </div>
