Fixed mobile issue in TinyCSS

--- a/projects/tinyCSS/index.html
+++ b/projects/tinyCSS/index.html
@@ -1,6 +1,7 @@
 <script type="text/javascript" src="tiny.js">
 </script>
 <link href="tiny.css" rel="stylesheet">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Tiny.css</title>
 <body>
 <nav class="menu" id="menu">
