TinyCSS tests update

--- a/projects/tinyCSS/index.html
+++ b/projects/tinyCSS/index.html
@@ -1,42 +1,56 @@
+<html class="
+	dark
+">
 <script type="text/javascript" src="tiny.js">
 </script>
 <link href="tiny.css" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Tiny.css</title>
 <body>
-<nav class="menu" id="menu">
+<nav class="menu collapse sticky themed" id="menu">
 		<div class="left on">
-			<a href="#menu" class="menu-open hoverable bold icon"><i class="icon-menu"></i></a>
-			<a href="#" class="menu-close hoverable bold icon"><i class="icon-menu"></i></a>
+			<a href="#menu" class="menu-open bold icon"><i class="icon-menu"></i></a>
+			<a href="#" class="menu-close bold icon"><i class="icon-menu"></i></a>
 			<h4 class="inline-title">Tiny.css</h4>
 		</div>
-		<div class="left">
-			<div>Test 1</div>
-			<div>Test 2</div>
-			<div>Test 3</div>
+		<div class="right on">
+			<div>Hey hey hey</div>
 		</div>
-		<div class="right">
-			<div>Test 4</div>
-			<div>Test 5</div>
-			<div>Test 6</div>
+		<div class="menu-content">
+			<div class="left hoverable">
+				<a href="#doc">Test1</a>
+				<a href="#doc">Test2</a>
+				<a href="#doc">Test3</a>
+			</div>
+			<div class="right">
+				<a href="#doc">Test6</a>
+				<a href="#doc">Test7</a>
+				<a href="#doc">Test8</a>
+				<a href="#doc">Test9</a>
+				<a href="#doc">Test10</a>
+				<a href="#doc">Test11</a>
+			</div>
 		</div>
 </nav>
 <div class="container">
 <div class="text-container">
-<h1 class="float-left h3">Beaucoups dfsdfsdfsdfsdf</h1>
-<h6 class="subtitle">Starting...</h6>
+<h1 class="float-left h3 text-themed">Beaucoups dfsdfsdfsdfsdf</h1>
+<h6 class="subtitle text-themed">Starting...</h6>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et purus in est suscipit feugiat id vel diam. Aenean faucibus pharetra purus lacinia porttitor. Nulla aliquet nibh vel arcu scelerisque sagittis. Aliquam sed elit tincidunt, dignissim felis a, tincidunt urna. In convallis, libero in lobortis hendrerit, nisl ipsum efficitur nisl, vel fermentum ex dolor a metus. Suspendisse vitae tempus enim. Nunc quis erat quis sem ullamcorper cursus. In nec orci vel nulla scelerisque ullamcorper.
-<blockquote class="quote italic">But what is life can we ask? Is it to live ? Is it to <em>die</em> ? For we ask all our life and then it's already gone like the wind in the rain.<footer>DJ Khaled</footer></blockquote>
+<blockquote class="text-themed quote italic"><div class="text-dark">But what is life can we ask? Is it to live ? Is it to <em>die</em> ? For we ask all our life and then it's already gone like the wind in the rain.<footer>DJ Khaled</footer></div></blockquote>
 <p>sfsdf
+<hr>
 <p>sdfsd
 <h1 class="float-left">dddddd</h1>
 <p>Nunc facilisis suscipit aliquam. Integer erat sapien, maximus a erat vitae, malesuada finibus augue. Morbi non sodales orci. Nunc molestie lobortis urna quis eleifend. Nunc ac nisi varius urna pretium gravida vel sit amet tortor. <span class="icon hoverable activable"><i class="icon-cross"></i></span> Aliquam non orci lectus. Morbi cursus, lectus ac dignissim pellentesque, eros mi congue elit, vitae maximus lorem diam at nunc. In pulvinar eu ante a eleifend. Donec ullamcorper suscipit urna at consequat. Suspendisse nec leo facilisis, sodales lectus non, ultrices velit. Etiam scelerisque tellus ut elit euismod, vel sagittis nisl lobortis. Aliquam consectetur justo hendrerit rhoncus viverra. Aliquam nec sem mi. dd <span class="icon hoverable activable"><i class="icon-menu"></i></span><a href="javascript:;" class="text-dark icon hoverable activable"><i class="icon-caret"></i></a>
+<span class="icon hoverable activable"><i class="icon-hamb"></i></span>
+<div><span class="spinner"></span></div>
 <nav class="toolbar-container">
 <ul class="toolbar">
 <li>
 	<ul class="group">
 		<li> <a class="button">ASDASD</a>
-		<li> <a class="button">ASDASD</a>
+		<li> <a class="button themed">ASDASD</a>
 		<li> <button class="button shadow">ASDASD</button>
 	</ul>
 <li> 	<div class="dropdown">
@@ -149,7 +163,8 @@ ddfgdfg
 	</tbody>
 </table>
 </div>
-<button data-toggle="first-modal">Open</button>
+<button>Test</button>
+<button data-toggle="first-modal" style="">Open</button>
 <section role="dialog" class="dialog" id="first-modal">
 	<div class="dialog-content">
 		<header>
